--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Absence/show.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Absence/show.html.twig
@@ -17,52 +17,46 @@
 {% endblock %}
 
 {% block content %}
-<div class="container_24">
-    <div class="grid_24">
-        <div>
-            <div class="left"><h1>{% trans %}label.absence.show{% endtrans %}</h1></div>
-            <div class="right"><a href="{{ path('_expediente_absences') }}" class="btn list"><span></span>{% trans %}label.back.list{% endtrans %}</a></div>
-            <div class="clear"></div>
-        </div>
-
-        <div class="centeredDiv">
-            <div class="formContainer" style="width: 920px;">
+<div class="container_24" style="width: 800px;">
+    <div class="grid_24" style="width: 100%;">
+        <div class="panelRow" id="doc-forms">
+            <div class="large-12 columns">
+                <div class="titleRow">
+                    <div class="left"><h3>{% trans %}label.absence.show{% endtrans %}</h3></div>
+                    <div class="right"><a href="{{ path('_expediente_absences') }}" class="button success-darker tiny"><span></span>{% trans %}label.back.list{% endtrans %}</a></div>
+                    <div class="clear"></div>
+                </div>
+                <!-- -->
                 <div id="showContainer">
+
                     <div>
-                        <div class="left" style="width: 150px; font-weight: bold;">{%trans%}label.student{%endtrans%}</div>
-                        <div id="labelCode" class="left">{{ entity.studentYear.student }}</div>
-                        <div class="clear"></div>
+                        <label>{%trans%}label.student{%endtrans%}</label>
+                        <span id="labelName">{{ entity.studentYear.student }}</span>
                     </div>
+
                     <div>
-                        <div class="left" style="width: 150px; font-weight: bold;">{%trans%}label.date{%endtrans%}</div>
-                        <div id="labelName" class="left">{{ entity.date|date("d/M/y") }}</div>
-                        <div class="clear"></div>
+                        <label>{%trans%}label.date{%endtrans%}</label>
+                        <span id="labelDate">{{ entity.date|date("d/M/y") }}</span>
                     </div>
+
                     <div>
-                        <div class="left" style="width: 150px; font-weight: bold;">{%trans%}label.justify{%endtrans%}</div>
-                        <div id="labelDescription" class="left">{% if entity.justify %}{% trans %} label.yes {% endtrans %} {% else %} {% trans %} label.no {% endtrans %} {% endif %}</div>
-                        <div class="clear"></div>
+                        <label>{%trans%}label.justify{%endtrans%}</label>
+                        <span id="labelJustify">{% if entity.justify %}{% trans %} label.yes {% endtrans %} {% else %} {% trans %} label.no {% endtrans %} {% endif %}</span>
                     </div>
+
                     <div>
-                        <div class="left" style="width: 150px; font-weight: bold;">{%trans%}label.comments{%endtrans%}</div>
-                        <div id="labelZone" class="left">{{ entity.comments }}</div>
-                        <div class="clear"></div>
+                        <label>{%trans%}label.comments{%endtrans%}</label>
+                        <span id="labelComments">{{ entity.comments }}</span>
                     </div>
+
                     <div id="buttonsContainer" style="margin-top: 25px;">
-                        <a href="{{ path('_expediente_sysadmin_absence_edit', {'id': entity.id}) }}" class="left btn edit"><span></span>{% trans %}label.edit{% endtrans %}</a>
-                        <div class="left btn delete" id="btnEliminar" style="margin-left: 25px;"><span></span>{% trans %}label.eliminar{% endtrans %}</div>
+                        <a href="{{ path('_expediente_sysadmin_absence_edit', {'id': entity.id}) }}" class="left button success-darker tiny"><span></span>{% trans %}label.edit{% endtrans %}</a>
+                        <div class="left button success-darker tiny" id="btnEliminar" style="margin-left: 25px;"><span></span>{% trans %}label.eliminar{% endtrans %}</div>
                         <div class="clear"></div>
                     </div>
                 </div>
-            </div>    
-        </div>        
-        <div class="clear"></div>
-    </div>
-    <div class="clear"></div>
-    <div class="wrapper">
-            <div class="grid_24 padline">
-                    <div class="lineH"></div>
             </div>
+        </div>
     </div>
 </div>
 {% endblock %}
