--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Administrador/list.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Administrador/list.html.twig
@@ -19,12 +19,16 @@
 {% block content %}
 <div class="container_24">
     <div class="grid_24">
-        <div>
-            <div class="left"><h1>{% trans %}label.usuarios.admin.listar{% endtrans %}</h1></div>
-            <div class="right"><a href="{{ path('_expediente_sysadmin_admin_create') }}" class="btn add"><span></span>{% trans %}label.add{% endtrans %}</a></div>
+        <div class="titleRow">
+            <div class="left"><h3>{% trans %}label.usuarios.admin.listar{% endtrans %}</h3></div>
+            <div class="right"><a href="{{ path('_expediente_sysadmin_admin_create') }}" class="button success-darker tiny"><span></span>{% trans %}label.add{% endtrans %}</a></div>
             <div class="clear"></div>
         </div>
-        
+        <div class="grid_24 padline">
+            <div class="lineH"></div>
+        </div>
+        <div class="clear"></div>
+        <div class="table">
         <div class="row tableHeader">
             <div class="option_width" style="float: left; width: 200px;">{% trans %}label.name{% endtrans %}</div>
             <div class="option_width" style="float: left; width: 200px;">{% trans %}label.username{% endtrans %}</div>
@@ -43,6 +47,7 @@
             </div>
             {% set counter = counter + 1 %}
         {% endfor %}
+        </div>
         <br/>
     
         <div style="margin-bottom:75px;">
@@ -56,10 +61,5 @@
         <div class="clear"></div>
     </div>
     <div class="clear"></div>
-    <div class="wrapper">
-            <div class="grid_24 padline">
-                    <div class="lineH"></div>
-            </div>
-    </div>
 </div>
 {% endblock %}
