--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/routes.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/routes.html.twig
@@ -20,9 +20,9 @@
     <div class="grid_24">
         <div>
             <div class="left">
-                <h1>{% trans %}label.reports.routes{% endtrans %}</h1>
+                <h3>{% trans %}label.reports.routes{% endtrans %}</h3>
             </div>
-            <button style="margin-left: 15px; margin-top: 0px;" type="button" class="right btn print" id="btnPrint" name="btnPrint" rel="Cat&aacute;logo de Rutas"><span></span>{% trans %}label.print{% endtrans %}</button>
+            <button style="margin-left: 15px; margin-top: 0px;" type="button" class="right button success-darker tiny" id="btnPrint" name="btnPrint" rel="Cat&aacute;logo de Rutas"><span></span>{% trans %}label.print{% endtrans %}</button>
             <div class="clear"></div>
         </div>
 
