--- a/src/Tecnotek/ExpedienteBundle/Resources/views/index.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/index.html.twig
@@ -84,39 +84,30 @@
             <div class="clear"></div>
     </div>
     <div class="clear"></div>
-    <div class="wrapper">
-            <div class="grid_24 padline">
-                    <div class="lineH"></div>
-            </div>
+    <br/>
+    <div class="grid_24 padline">
+        <div class="lineH"></div>
     </div>
-    <div class="wrapper">
-            <div class="grid_8" style="text-align: center;">
-                    <h2>Kinder</h2>
-                    <img src="images/logo_conejo.jpe" alt="" width="175" height="150">
-                    <p class="pad">Espacio Reservado.</p>
-                    <a href="http://tioconejo.net/" target="_blank" class="button">Ir al Sitio</a>
-            </div>
-            <div class="grid_8"  style="text-align: center;">
-                    <h2>Escuela</h2>
-                    <img src="images/logo_saint.png" alt="" width="175" height="150">
-                    <p class="pad">Espacio Reservado.</p>
-                    <a href="http://saintmichaelcr.net/" target="_blank" class="button">Ir al Sitio</a>
-            </div>
-            <div class="grid_8" style="text-align: center;">
-                    <h2>Colegio</h2>
-                    <img src="images/logo_saint.png" alt="" width="175" height="150">
-                    <p class="pad">Espacio Reservado.</p>
-                    <a href="http://saintmichaelcr.net/" target="_blank" class="button">Ir al Sitio</a>
-            </div>
-    </div>
-    <div class="wrapper">
-            <div class="grid_24">
-                    <div class="padline2"><div class="lineH"></div></div>
-                    <h2 class="padtitle22">Otros Enlaces</h2>
-                    <ul class="partners">
-                            <li><a href="#"><img src="images/1page_img9.png" alt=""></a></li>
-                    </ul>
-            </div>
+
+    <div class="large-12 columns">
+        <div class="grid_8" style="text-align: center;">
+            <h2>Kinder</h2>
+            <a class="th" href="http://tioconejo.net/" target="_blank"><img src="{{ asset('expediente/images/logo_conejo.jpe') }}" data-caption="" width="175px" height="150px"></a>
+            <p class="pad">Espacio Reservado.</p>
+            <a href="" target="_blank" class="button tiny">Ir al Sitio</a>
+        </div>
+        <div class="grid_8"  style="text-align: center;">
+            <h2>Escuela</h2>
+            <a class="th" href="http://saintmichaelcr.net/" target="_blank"><img src="{{ asset('expediente/images/logo_saint.png') }}" data-caption="" width="175px" height="150px"></a>
+            <p class="pad">Espacio Reservado.</p>
+            <a href="http://saintmichaelcr.net/" target="_blank" class="button tiny">Ir al Sitio</a>
+        </div>
+        <div class="grid_8" style="text-align: center;">
+            <h2>Colegio</h2>
+            <a class="th" href="http://saintmichaelcr.net/" target="_blank"><img src="{{ asset('expediente/images/logo_saint.png') }}" data-caption="" width="175px" height="150px"></a>
+            <p class="pad">Espacio Reservado.</p>
+            <a href="" target="_blank" class="button tiny">Ir al Sitio</a>
+        </div>
     </div>
 </div>
 {% endblock %}
