--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Bus/list.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Bus/list.html.twig
@@ -16,29 +16,30 @@
 {% block content %}
 <div class="container_24">
     <div class="grid_24">
-        <div>
-            <div class="left"><h1>{% trans %}label.bus.listar{% endtrans %}</h1></div>
-            <div class="right"><a href="{{ path('_expediente_sysadmin_bus_create') }}" class="btn add"><span></span>{% trans %}label.add{% endtrans %}</a></div>
+        <div class="titleRow">
+            <div class="left"><h3>{% trans %}label.bus.listar{% endtrans %}</h3></div>
+            <div class="right"><a href="{{ path('_expediente_sysadmin_bus_create') }}" class="button success-darker tiny"><span></span>{% trans %}label.add{% endtrans %}</a></div>
             <div class="clear"></div>
         </div>
-        
-        <div class="row tableHeader">
-            <div class="option_width" style="float: left; width: 150px;">{% trans %}label.name{% endtrans %}</div>
-            <div class="option_width" style="float: left; width: 75px;">{% trans %}label.licensePlate{% endtrans %}</div>
-            <div class="option_width" style="float: left; width: 75px;">{% trans %}label.color{% endtrans %}</div>
-            <div class="option_width" style="float: left; width: 200px;">{% trans %}label.driver{% endtrans %}</div>
-            <div class="option_width" style="float: left; width: 80px;">{% trans %}label.capacity{% endtrans %}</div>
-            <div class="option_width" style="float: left; width: 100px;">{% trans %}label.permission{% endtrans %}</div>
-        </div>
-            
-        {% set counter = 0 %}   
 
-        {% for entity in pagination %}            
+        <div class="table">
+            <div class="row tableHeader">
+                <div class="option_width" style="float: left; width: 250px;">{% trans %}label.name{% endtrans %}</div>
+                <div class="option_width" style="float: left; width: 75px;">{% trans %}label.licensePlate{% endtrans %}</div>
+                <div class="option_width" style="float: left; width: 75px;">{% trans %}label.color{% endtrans %}</div>
+                <div class="option_width" style="float: left; width: 250px;">{% trans %}label.driver{% endtrans %}</div>
+                <div class="option_width" style="float: left; width: 80px;">{% trans %}label.capacity{% endtrans %}</div>
+                <div class="option_width" style="float: left; width: 100px;">{% trans %}label.permission{% endtrans %}</div>
+            </div>
+
+            {% set counter = 0 %}
+
+            {% for entity in pagination %}
             <div class="row userRow {% if counter%2 == 0 %}tableRowOdd{%else%}tableRow{% endif %}">
-                <div class="option_width" style="float: left; width: 150px;">{{ entity.name }}</div>
+                <div class="option_width" style="float: left; width: 250px;">{{ entity.name }}</div>
                 <div class="option_width" style="float: left; width: 75px;">{{ entity.licensePlate }}</div>
                 <div class="option_width" style="float: left; width: 75px;">{{ entity.color }}</div>
-                <div class="option_width" style="float: left; width: 200px;">{{ entity.driver }}</div>
+                <div class="option_width" style="float: left; width: 250px;">{{ entity.driver }}</div>
                 <div class="option_width" style="float: left; width: 80px;">{{ entity.capacity }}</div>
                 <div class="option_width" style="float: left; width: 100px;">{% if entity.permission != null %} {{ entity.permission|date("d/M/y") }} {% else %} &nbsp; {% endif %}</div>
                 <div class="right imageButton editButton"  title="{% trans %}label.edit{% endtrans %}"  rel="{{ entity.id }}"></div>
@@ -46,9 +47,11 @@
                 <div class="clear"></div>
             </div>
             {% set counter = counter + 1 %}
-        {% endfor %}
+            {% endfor %}
+        </div>
+
         <br/>
-    
+
         <div style="margin-bottom:75px;">
             {# display navigation #}    
             {{ pagination.render()|raw }}
@@ -56,10 +59,5 @@
         <div class="clear"></div>
     </div>
     <div class="clear"></div>
-    <div class="wrapper">
-            <div class="grid_24 padline">
-                    <div class="lineH"></div>
-            </div>
-    </div>
 </div>
 {% endblock %}
