--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Bus/new.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Bus/new.html.twig
@@ -11,59 +11,99 @@
 {% endblock %}
 
 {% block content %}
-<div class="container_24">
-    <div class="grid_24">
-        <div>
-            <div class="left"><h1>{% trans %}label.bus.new{% endtrans %}</h1></div>
-            <div class="clear"></div>
-        </div>
-        <div class="centeredDiv" style="width: 700px;">
-            <div class="formContainer">
-                <form class="customForm" id="createAdminForm" action="{{ path('_expediente_sysadmin_bus_save') }}" method="post" {{ form_enctype(form) }}>
+<div class="container_24" style="width: 800px;">
+    <div class="grid_24" style="width: 100%;">
+        <div class="panelRow" id="doc-forms">
+            <div class="large-12 columns">
+                <form class="custom" id="createForm" action="{{ path('_expediente_sysadmin_bus_save') }}" method="post" {{ form_enctype(form) }}>
                     {{ form_errors(form) }}
 
                     {{ form_widget(form._token) }}
 
-                    <div class="formErrors">{{ form_errors(form.name) }}</div>
-                    <label><span class="text-form" style="min-width: 150px;">{% trans %}label.name{% endtrans %}</span>{{ form_widget(form.name) }}</label>
+                    <fieldset>
+                        <legend>{% trans %}label.bus.new{% endtrans %}</legend>
 
-                    <div class="formErrors">{{ form_errors(form.licensePlate) }}</div>
-                    <label><span class="text-form" style="min-width: 150px;">{% trans %}label.licensePlate{% endtrans %}</span>{{ form_widget(form.licensePlate) }}</label>
+                        <div class="formRow">
+                            <label class="error">{{ form_errors(form.name) }}</label>
+                            <div class="large-12 columns">
+                                <label>{% trans %}label.name{% endtrans %}</label>{{ form_widget(form.name) }}
+                            </div>
+                        </div>
 
-                    <div class="formErrors">{{ form_errors(form.color) }}</div>
-                    <label><span class="text-form" style="min-width: 150px;">{% trans %}label.color{% endtrans %}</span>{{ form_widget(form.color) }}</label>
+                        <div class="formRow">
+                            <label class="error">{{ form_errors(form.licensePlate) }}</label>
+                            <div class="large-12 columns">
+                                <label>{% trans %}label.licensePlate{% endtrans %}</label>{{ form_widget(form.licensePlate) }}
+                            </div>
+                        </div>
 
-                    <div class="formErrors">{{ form_errors(form.driver) }}</div>
-                    <label><span class="text-form" style="min-width: 150px;">{% trans %}label.driver{% endtrans %}</span>{{ form_widget(form.driver) }}</label>
+                        <div class="formRow">
+                            <label class="error">{{ form_errors(form.color) }}</label>
+                            <div class="large-12 columns">
+                                <label>{% trans %}label.color{% endtrans %}</label>{{ form_widget(form.color) }}
+                            </div>
+                        </div>
 
-                    <div class="formErrors">{{ form_errors(form.telephone) }}</div>
-                    <label><span class="text-form" style="min-width: 150px;">{% trans %}label.telephone{% endtrans %}</span>{{ form_widget(form.telephone) }}</label>
+                        <div class="formRow">
+                            <label class="error">{{ form_errors(form.driver) }}</label>
+                            <div class="large-12 columns">
+                                <label>{% trans %}label.driver{% endtrans %}:</label>{{ form_widget(form.driver) }}
+                            </div>
+                        </div>
 
-                    <div class="formErrors">{{ form_errors(form.capacity) }}</div>
-                    <label><span class="text-form" style="min-width: 150px;">{% trans %}label.capacity{% endtrans %}</span>{{ form_widget(form.capacity) }}</label>
+                        <div class="formRow">
+                            <label class="error">{{ form_errors(form.telephone) }}</label>
+                            <div class="large-12 columns">
+                                <label>{% trans %}label.telephone{% endtrans %}:</label>{{ form_widget(form.telephone) }}
+                            </div>
+                        </div>
 
-                    <div class="formErrors">{{ form_errors(form.riteve) }}</div>
-                    <label><span class="text-form" style="min-width: 150px;">{% trans %}label.riteve{% endtrans %}</span>{{ form_widget(form.riteve) }}</label>
+                        <div class="formRow">
+                            <label class="error">{{ form_errors(form.capacity) }}</label>
+                            <div class="large-12 columns">
+                                <label>{% trans %}label.capacity{% endtrans %}:</label>{{ form_widget(form.capacity) }}
+                            </div>
+                        </div>
 
-                    <div class="formErrors">{{ form_errors(form.ins) }}</div>
-                    <label><span class="text-form" style="min-width: 150px;">{% trans %}label.ins{% endtrans %}</span>{{ form_widget(form.ins) }}</label>
+                        <div class="formRow">
+                            <label class="error">{{ form_errors(form.riteve) }}</label>
+                            <div class="large-12 columns">
+                                <label>{% trans %}label.riteve{% endtrans %}:</label>{{ form_widget(form.riteve) }}
+                            </div>
+                        </div>
 
-                    <div class="formErrors">{{ form_errors(form.permission) }}</div>
-                    <label><span class="text-form" style="min-width: 150px;">{% trans %}label.permission{% endtrans %}</span>{{ form_widget(form.permission) }}</label>
+                        <div class="formRow">
+                            <label class="error">{{ form_errors(form.ins) }}</label>
+                            <div class="large-12 columns">
+                                <label>{% trans %}label.ins{% endtrans %}:</label>{{ form_widget(form.ins) }}
+                            </div>
+                        </div>
 
-                    <div class="left"><a href="{{ path('_expediente_sysadmin_bus') }}" class="btn delete"><span></span>{% trans %}label.cancelar{% endtrans %}</a></div>
-                    <button style="margin-left: 15px; margin-top: 0px;" type="submit" class="left btn save" name="save"><span></span>{% trans %}label.save{% endtrans %}</button>
-                    <div class="clear"></div>                    
+                        <div class="formRow">
+                            <label class="error">{{ form_errors(form.permission) }}</label>
+                            <div class="large-12 columns">
+                                <label>{% trans %}label.permission{% endtrans %}:</label>{{ form_widget(form.permission) }}
+                            </div>
+                        </div>
+
+                        <div class="formRow ">
+                            <div class="large-12 columns buttonsPanel">
+                                <a href="{{ path('_expediente_sysadmin_bus') }}"
+                                   class="button success-darker tiny"><span></span>{% trans %}label.cancelar{% endtrans %}</a>
+
+                                <input class="button success-darker tiny" style="margin-top: 0px;"
+                                       type="submit" name="save"
+                                       value="{% trans %}label.save{% endtrans %}"/>
+
+                            </div>
+                            <div class="clear"></div>
+                        </div>
+
+                    </fieldset>
                 </form>
-            </div>    
-        </div>        
-        <div class="clear"></div>
-    </div>
-    <div class="clear"></div>
-    <div class="wrapper">
-            <div class="grid_24 padline">
-                    <div class="lineH"></div>
             </div>
+        </div>
+        <div class="clear"></div>
     </div>
 </div>
 {% endblock %}
