--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Bus/show.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Bus/show.html.twig
@@ -17,78 +17,70 @@
 {% endblock %}
 
 {% block content %}
-<div class="container_24">
-    <div class="grid_24">
-        <div>
-            <div class="left"><h1>{% trans %}label.bus.show{% endtrans %}</h1></div>
-            <div class="right"><a href="{{ path('_expediente_sysadmin_bus') }}" class="btn list"><span></span>{% trans %}label.back.list{% endtrans %}</a></div>
-            <div class="clear"></div>
-        </div>
-
-        <div class="centeredDiv">
-            <div class="formContainer" style="width: 920px;">
+<div class="container_24" style="width: 800px;">
+    <div class="grid_24" style="width: 100%;">
+        <div class="panelRow" id="doc-forms">
+            <div class="large-12 columns">
+                <div class="titleRow">
+                    <div class="left"><h3>{% trans %}label.bus.show{% endtrans %}</h3></div>
+                    <div class="right"><a href="{{ path('_expediente_sysadmin_bus') }}" class="button success-darker tiny"><span></span>{% trans %}label.back.list{% endtrans %}</a></div>
+                    <div class="clear"></div>
+                </div>
+                <!-- -->
                 <div id="showContainer">
                     <div>
-                        <div class="left" style="width: 150px; font-weight: bold;">{%trans%}label.name{%endtrans%}</div>
-                        <div id="labelName" class="left">{{ entity.name }}</div>
-                        <div class="clear"></div>
+                        <label>{%trans%}label.name{%endtrans%}</label>
+                        <span id="labelName">{{ entity.name }}</span>
                     </div>
+
                     <div>
-                        <div class="left" style="width: 150px; font-weight: bold;">{%trans%}label.licensePlate{%endtrans%}</div>
-                        <div id="labelLicensePlate" class="left">{{ entity.licensePlate }}</div>
-                        <div class="clear"></div>
+                        <label>{%trans%}label.licensePlate{%endtrans%}</label>
+                        <span id="labelLicensePlate">{{ entity.licensePlate }}</span>
                     </div>
+
                     <div>
-                        <div class="left" style="width: 150px; font-weight: bold;">{%trans%}label.color{%endtrans%}</div>
-                        <div id="labelColor" class="left">{{ entity.color }}</div>
-                        <div class="clear"></div>
+                        <label>{%trans%}label.color{%endtrans%}</label>
+                        <span id="labelColor">{{ entity.color }}</span>
                     </div>
+
                     <div>
-                        <div class="left" style="width: 150px; font-weight: bold;">{%trans%}label.driver{%endtrans%}</div>
-                        <div id="labelDriver" class="left">{{ entity.driver }}</div>
-                        <div class="clear"></div>
+                        <label>{%trans%}label.driver{%endtrans%}</label>
+                        <span id="labelDriver">{{ entity.driver }}</span>
                     </div>
+
                     <div>
-                        <div class="left" style="width: 150px; font-weight: bold;">{%trans%}label.telephone{%endtrans%}</div>
-                        <div id="labelTelephone" class="left">{{ entity.telephone }}</div>
-                        <div class="clear"></div>
+                        <label>{%trans%}label.telephone{%endtrans%}</label>
+                        <span id="labelTelephone">{{ entity.telephone }}</span>
                     </div>
+
                     <div>
-                        <div class="left" style="width: 150px; font-weight: bold;">{%trans%}label.capacity{%endtrans%}</div>
-                        <div id="labelCapacity" class="left">{{ entity.capacity }}</div>
-                        <div class="clear"></div>
+                        <label>{%trans%}label.capacity{%endtrans%}</label>
+                        <span id="labelCapacity">{{ entity.capacity }}</span>
                     </div>
+
                     <div>
-                        <div class="left" style="width: 150px; font-weight: bold;">{%trans%}label.riteve{%endtrans%}</div>
-                        <div id="labelRiteve" class="left">{% if entity.riteve != null %}{{ entity.riteve|date("d/M/y") }}{% endif %}</div>
-                        <div class="clear"></div>
+                        <label>{%trans%}label.riteve{%endtrans%}</label>
+                        <span id="labelRiteve">{% if entity.riteve != null %}{{ entity.riteve|date("d/M/y") }}{% endif %}</span>
                     </div>
+
                     <div>
-                        <div class="left" style="width: 150px; font-weight: bold;">{%trans%}label.ins{%endtrans%}</div>
-                        <div id="labelIns" class="left">{% if entity.ins != null %}{{ entity.ins|date("d/M/y") }}{% endif %}</div>
-                        <div class="clear"></div>
+                        <label>{%trans%}label.ins{%endtrans%}</label>
+                        <span id="labelIns">{% if entity.ins != null %}{{ entity.ins|date("d/M/y") }}{% endif %}</span>
                     </div>
+
                     <div>
-                        <div class="left" style="width: 150px; font-weight: bold;">{%trans%}label.permission{%endtrans%}</div>
-                        <div id="labelPermission" class="left">{% if entity.permission != null %}{{ entity.permission|date("d/M/y") }} {% endif %}</div>
-                        <div class="clear"></div>
+                        <label>{%trans%}label.permission{%endtrans%}</label>
+                        <span id="labelPermission">{% if entity.permission != null %}{{ entity.permission|date("d/M/y") }} {% endif %}</span>
                     </div>
 
                     <div id="buttonsContainer" style="margin-top: 25px;">
-                        <a href="{{ path('_expediente_sysadmin_bus_edit', {'id': entity.id}) }}" class="left btn edit"><span></span>{% trans %}label.edit{% endtrans %}</a>
-                        <div class="left btn delete" id="btnEliminar" style="margin-left: 25px;"><span></span>{% trans %}label.eliminar{% endtrans %}</div>
+                        <a href="{{ path('_expediente_sysadmin_bus_edit', {'id': entity.id}) }}" class="left button success-darker tiny"><span></span>{% trans %}label.edit{% endtrans %}</a>
+                        <div class="left button success-darker tiny" id="btnEliminar" style="margin-left: 25px;"><span></span>{% trans %}label.eliminar{% endtrans %}</div>
                         <div class="clear"></div>
                     </div>
                 </div>
-            </div>    
-        </div>        
-        <div class="clear"></div>
-    </div>
-    <div class="clear"></div>
-    <div class="wrapper">
-            <div class="grid_24 padline">
-                    <div class="lineH"></div>
             </div>
+        </div>
     </div>
 </div>
 {% endblock %}
