--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Club/new.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Club/new.html.twig
@@ -11,47 +11,70 @@
 {% endblock %}
 
 {% block content %}
-<div class="container_24">
-    <div class="grid_24">
-        <div>
-            <div class="left"><h1>{% trans %}label.club.new{% endtrans %}</h1></div>
-            <div class="clear"></div>
-        </div>
-        <div class="centeredDiv" style="width: 700px;">
-            <div class="formContainer">
-                <form class="customForm" id="mainForm" action="{{ path('_expediente_sysadmin_club_save') }}" method="post" {{ form_enctype(form) }}>
+<div class="container_24" style="width: 800px;">
+    <div class="grid_24" style="width: 100%;">
+        <div class="panelRow" id="doc-forms">
+            <div class="large-12 columns">
+                <form class="custom" id="mainForm" action="{{ path('_expediente_sysadmin_club_save') }}" method="post" {{ form_enctype(form) }}>
                     {{ form_errors(form) }}
 
                     {{ form_widget(form._token) }}
 
-                    <div class="formErrors">{{ form_errors(form.name) }}</div>
-                    <label><span class="text-form" style="min-width: 150px;">{% trans %}label.name{% endtrans %}</span>{{ form_widget(form.name) }}</label>
+                    <fieldset>
+                        <legend>{% trans %}label.club.new{% endtrans %}</legend>
 
-                    <div class="formErrors">{{ form_errors(form.coordinator) }}</div>
-                    <label><span class="text-form" style="min-width: 150px;">{% trans %}label.coordinator{% endtrans %}</span>{{ form_widget(form.coordinator) }}</label>
+                        <div class="formRow">
+                            <label class="error">{{ form_errors(form.name) }}</label>
+                            <div class="large-12 columns">
+                                <label>{% trans %}label.name{% endtrans %}</label>{{ form_widget(form.name) }}
+                            </div>
+                        </div>
 
-                    <div class="formErrors">{{ form_errors(form.day) }}</div>
-                    <label><span class="text-form" style="min-width: 150px;">{% trans %}label.day{% endtrans %}</span>{{ form_widget(form.day) }}</label>
+                        <div class="formRow">
+                            <label class="error">{{ form_errors(form.coordinator) }}</label>
+                            <div class="large-12 columns">
+                                <label>{% trans %}label.coordinator{% endtrans %}</label>{{ form_widget(form.coordinator) }}
+                            </div>
+                        </div>
 
-                    <div class="formErrors">{{ form_errors(form.timeI) }}</div>
-                    <label><span class="text-form" style="min-width: 150px;">{% trans %}label.timeI{% endtrans %}</span>{{ form_widget(form.timeI) }}</label>
+                        <div class="formRow">
+                            <label class="error">{{ form_errors(form.day) }}</label>
+                            <div class="large-12 columns">
+                                <label>{% trans %}label.day{% endtrans %}</label>{{ form_widget(form.day) }}
+                            </div>
+                        </div>
 
-                    <div class="formErrors">{{ form_errors(form.timeO) }}</div>
-                    <label><span class="text-form" style="min-width: 150px;">{% trans %}label.timeO{% endtrans %}</span>{{ form_widget(form.timeO) }}</label>
+                        <div class="formRow">
+                            <label class="error">{{ form_errors(form.timeI) }}</label>
+                            <div class="large-12 columns">
+                                <label>{% trans %}label.timeI{% endtrans %}</label>{{ form_widget(form.timeI) }}
+                            </div>
+                        </div>
 
-                    <div class="left"><a href="{{ path('_expediente_sysadmin_club') }}" class="btn delete"><span></span>{% trans %}label.cancelar{% endtrans %}</a></div>
-                    <button style="margin-left: 15px; margin-top: 0px;" type="submit" class="left btn save" name="save"><span></span>{% trans %}label.save{% endtrans %}</button>
-                    <div class="clear"></div>                    
+                        <div class="formRow">
+                            <label class="error">{{ form_errors(form.timeO) }}</label>
+                            <div class="large-12 columns">
+                                <label>{% trans %}label.timeO{% endtrans %}</label>{{ form_widget(form.timeO) }}
+                            </div>
+                        </div>
+
+                        <div class="formRow ">
+                            <div class="large-12 columns buttonsPanel">
+                                <a href="{{ path('_expediente_sysadmin_club') }}"
+                                   class="button success-darker tiny"><span></span>{% trans %}label.cancelar{% endtrans %}</a>
+
+                                <input class="button success-darker tiny" style="margin-top: 0px;"
+                                       type="submit" name="save"
+                                       value="{% trans %}label.save{% endtrans %}"/>
+                            </div>
+                            <div class="clear"></div>
+                        </div>
+
+                    </fieldset>
                 </form>
-            </div>    
-        </div>        
-        <div class="clear"></div>
-    </div>
-    <div class="clear"></div>
-    <div class="wrapper">
-            <div class="grid_24 padline">
-                    <div class="lineH"></div>
             </div>
+        </div>
+        <div class="clear"></div>
     </div>
 </div>
 {% endblock %}
