--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Coordinador/list.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Coordinador/list.html.twig
@@ -19,47 +19,42 @@
 {% block content %}
 <div class="container_24">
     <div class="grid_24">
-        <div>
-            <div class="left"><h1>{% trans %}label.usuarios.coordinador.listar{% endtrans %}</h1></div>
-            <div class="right"><a href="{{ path('_expediente_sysadmin_coordinador_create') }}" class="btn add"><span></span>{% trans %}label.add{% endtrans %}</a></div>
+        <div class="titleRow">
+            <div class="left"><h3>{% trans %}label.usuarios.coordinador.listar{% endtrans %}</h3></div>
+            <div class="right"><a href="{{ path('_expediente_sysadmin_coordinador_create') }}" class="button success-darker tiny"><span></span>{% trans %}label.add{% endtrans %}</a></div>
             <div class="clear"></div>
         </div>
-        
-        <div class="row tableHeader">
-            <div class="option_width" style="float: left; width: 200px;">{% trans %}label.name{% endtrans %}</div>
-            <div class="option_width" style="float: left; width: 200px;">{% trans %}label.username{% endtrans %}</div>
-            <div class="option_width" style="float: left; width: 250px;">{% trans %}label.email{% endtrans %}</div>
-            <div class="option_width" style="float: left; width: 200px;">{% trans %}label.status{% endtrans %}</div>
+        <div class="grid_24 padline">
+            <div class="lineH"></div>
         </div>
-            
-        {% set counter = 0 %}   
-
-        {% for entity in pagination %}            
-            <div class="row userRow {% if counter%2 == 0 %}tableRowOdd{%else%}tableRow{% endif %}" rel="{{ entity.id }}">
-                <div class="option_width" style="float: left; width: 200px;">{{ entity.firstname }} {{ entity.lastname }}</div>
-                <div class="option_width" style="float: left; width: 200px;">{{ entity.username }}</div>
-                <div class="option_width" style="float: left; width: 250px;">{{ entity.email }}</div>
-                <div class="option_width" style="float: left; width: 200px;">{% if entity.active %}{% trans %}usuarios.estado.1{% endtrans %}{% else %} {% trans %}usuarios.estado.2{% endtrans %} {% endif %}</div>
+        <div class="clear"></div>
+        <div class="table">
+            <div class="row tableHeader">
+                <div class="option_width" style="float: left; width: 200px;">{% trans %}label.name{% endtrans %}</div>
+                <div class="option_width" style="float: left; width: 200px;">{% trans %}label.username{% endtrans %}</div>
+                <div class="option_width" style="float: left; width: 250px;">{% trans %}label.email{% endtrans %}</div>
+                <div class="option_width" style="float: left; width: 200px;">{% trans %}label.status{% endtrans %}</div>
             </div>
-            {% set counter = counter + 1 %}
-        {% endfor %}
+
+            {% set counter = 0 %}
+
+            {% for entity in pagination %}
+                <div class="row userRow {% if counter%2 == 0 %}tableRowOdd{%else%}tableRow{% endif %}" rel="{{ entity.id }}">
+                    <div class="option_width" style="float: left; width: 200px;">{{ entity.firstname }} {{ entity.lastname }}</div>
+                    <div class="option_width" style="float: left; width: 200px;">{{ entity.username }}</div>
+                    <div class="option_width" style="float: left; width: 250px;">{{ entity.email }}</div>
+                    <div class="option_width" style="float: left; width: 200px;">{% if entity.active %}{% trans %}usuarios.estado.1{% endtrans %}{% else %} {% trans %}usuarios.estado.2{% endtrans %} {% endif %}</div>
+                </div>
+                {% set counter = counter + 1 %}
+            {% endfor %}
+        </div>
         <br/>
     
-        <div style="margin-bottom:75px;">
-            {# display navigation #}    
+        <div style="margin-bottom:15px;">
             {{ pagination.render()|raw }}
-
-            <div id="search-teacher" style="float: left">
-                    <div id="pageslinks" style="float: left"></div>
-            </div>
         </div>    
         <div class="clear"></div>
     </div>
     <div class="clear"></div>
-    <div class="wrapper">
-            <div class="grid_24 padline">
-                    <div class="lineH"></div>
-            </div>
-    </div>
 </div>
 {% endblock %}
