--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Course/list.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Course/list.html.twig
@@ -16,18 +16,19 @@
 {% block content %}
 <div class="container_24">
     <div class="grid_24">
-        <div>
-            <div class="left"><h1>{% trans %}label.course.listar{% endtrans %}</h1></div>
-            <div class="right"><a href="{{ path('_expediente_sysadmin_course_create') }}" class="btn add"><span></span>{% trans %}label.add{% endtrans %}</a></div>
+        <div class="titleRow">
+            <div class="left"><h3>{% trans %}label.course.listar{% endtrans %}</h3></div>
+            <div class="right"><a href="{{ path('_expediente_sysadmin_course_create') }}" class="button success-darker tiny"><span></span>{% trans %}label.add{% endtrans %}</a></div>
             <div class="clear"></div>
         </div>
-        
-        <div class="row tableHeader">
-            <div class="option_width" style="float: left; width: 150px;">{% trans %}label.name{% endtrans %}</div>
-            <div class="option_width" style="float: left; width: 75px;">{% trans %}label.type{% endtrans %}</div>
-        </div>
 
-        {% for entity in pagination %}            
+        <div class="table">
+            <div class="row tableHeader">
+                <div class="option_width" style="float: left; width: 150px;">{% trans %}label.name{% endtrans %}</div>
+                <div class="option_width" style="float: left; width: 75px;">{% trans %}label.type{% endtrans %}</div>
+            </div>
+
+            {% for entity in pagination %}
             <div class="row userRow {% if loop.index%2 == 0 %}tableRowOdd{%else%}tableRow{% endif %}">
                 <div class="option_width" style="float: left; width: 150px;">{{ entity.name }}</div>
                 <div class="option_width" style="float: left; width: 75px;">{{ entity.type }}</div>
@@ -35,7 +36,9 @@
                 <div class="right imageButton viewButton"  title="{% trans %}label.view{% endtrans %}"  rel="{{ entity.id }}"></div>
                 <div class="clear"></div>
             </div>
-        {% endfor %}
+            {% endfor %}
+        </div>
+
         <br/>
     
         <div style="margin-bottom:75px;">
