--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Period/show.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Period/show.html.twig
@@ -17,47 +17,41 @@
 {% endblock %}
 
 {% block content %}
-<div class="container_24">
-    <div class="grid_24">
-        <div>
-            <div class="left"><h1>{% trans %}label.period.show{% endtrans %}</h1></div>
-            <div class="right"><a href="{{ path('_expediente_sysadmin_period') }}" class="btn list"><span></span>{% trans %}label.back.list{% endtrans %}</a></div>
-            <div class="clear"></div>
-        </div>
-
-        <div class="centeredDiv">
-            <div class="formContainer" style="width: 920px;">
+<div class="container_24" style="width: 800px;">
+    <div class="grid_24" style="width: 100%;">
+        <div class="panelRow" id="doc-forms">
+            <div class="large-12 columns">
+                <div class="titleRow">
+                    <div class="left"><h3>{% trans %}label.period.show{% endtrans %}</h3></div>
+                    <div class="right"><a href="{{ path('_expediente_sysadmin_period') }}" class="button success-darker tiny"><span></span>{% trans %}label.back.list{% endtrans %}</a></div>
+                    <div class="clear"></div>
+                </div>
+                <!-- -->
                 <div id="showContainer">
+
                     <div>
-                        <div class="left" style="width: 150px; font-weight: bold;">{%trans%}label.name{%endtrans%}</div>
-                        <div id="labelName" class="left">{{ entity.name }}</div>
-                        <div class="clear"></div>
+                        <label>{%trans%}label.name{%endtrans%}</label>
+                        <span id="labelName">{{ entity.name }}</span>
                     </div>
+
                     <div>
-                        <div class="left" style="width: 150px; font-weight: bold;">{%trans%}label.year{%endtrans%}</div>
-                        <div id="labelYear" class="left">{{ entity.year }}</div>
-                        <div class="clear"></div>
+                        <label>{%trans%}label.year{%endtrans%}</label>
+                        <span id="labelYear">{{ entity.year }}</span>
                     </div>
+
                     <div>
-                        <div class="left" style="width: 150px; font-weight: bold;">{%trans%}label.current.period{%endtrans%}</div>
-                        <div id="labelActual" class="left">{% if entity.actual %}{% trans %}label.yes{% endtrans %}{% else %} {% trans %}label.no{% endtrans %} {% endif %}</div>
-                        <div class="clear"></div>
+                        <label>{%trans%}label.current.period{%endtrans%}</label>
+                        <span id="labelActual">{% if entity.actual %}{% trans %}label.yes{% endtrans %}{% else %} {% trans %}label.no{% endtrans %} {% endif %}</span>
                     </div>
+
                     <div id="buttonsContainer" style="margin-top: 25px;">
-                        <a href="{{ path('_expediente_sysadmin_period_edit', {'id': entity.id}) }}" class="left btn edit"><span></span>{% trans %}label.edit{% endtrans %}</a>
-                        <div class="left btn delete" id="btnEliminar" style="margin-left: 25px;"><span></span>{% trans %}label.eliminar{% endtrans %}</div>
+                        <a href="{{ path('_expediente_sysadmin_period_edit', {'id': entity.id}) }}" class="left button success-darker tiny"><span></span>{% trans %}label.edit{% endtrans %}</a>
+                        <div class="left button success-darker tiny" id="btnEliminar" style="margin-left: 25px;"><span></span>{% trans %}label.eliminar{% endtrans %}</div>
                         <div class="clear"></div>
                     </div>
                 </div>
-            </div>    
-        </div>        
-        <div class="clear"></div>
-    </div>
-    <div class="clear"></div>
-    <div class="wrapper">
-            <div class="grid_24 padline">
-                    <div class="lineH"></div>
             </div>
+        </div>
     </div>
 </div>
 {% endblock %}
