--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/clubs.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/clubs.html.twig
@@ -21,27 +21,30 @@
     <div class="grid_24">
         <div>
             <div class="left">
-                <h1>{% trans %}label.report.clubs.title{% endtrans %}</h1>
+                <h3>{% trans %}label.report.clubs.title{% endtrans %}</h3>
+            </div>
+            <div class="left" style="line-height: 48px; margin-left: 25px;">
                 <span>{% trans %}label.report.clubs.subtitle{% endtrans %}</span>
             </div>
             <div class="clear"></div>
         </div>
-        <div class="filter-search">
+
+        <div class="filter-search table">
             <div class="internal">
                 <form id="searchForm" action="{{ path('_expediente_report_clubs') }}" method="post">
                     <input type="hidden" name="tipo" id="tipo" value="0">
-                    <div class="filter-row">
+                    <div>
                         <div class="field" style="width: 100%">
                             <div class="left">
-                                <label style="width: 160px;">{%trans%}label.report.clubs.include.students{%endtrans%}:</label>
+                                <label style="width: 175px;">{%trans%}label.report.clubs.include.students{%endtrans%}:</label>
                                 <input type="checkbox" class="check" id="withStudents" name="withStudents" {% if withStudents != null %}checked="checked"{% endif %}>
                             </div>
-                            <button style="margin-left: 15px; margin-top: 0px;" type="submit" class="right btn save" name="search"><span></span>{% trans %}label.generate{% endtrans %}</button>
+                            <button style="margin-left: 15px; margin-top: 0px;" type="submit" class="right button success-darker tiny" name="search"><span></span>{% trans %}label.generate{% endtrans %}</button>
                         </div>
                     </div>
                     <div class="clear"></div>
-                    <div id="details" name="details" class="filter-row" {% if withStudents == null %}style="display: none;"{% endif %}>
-                        <label>{%trans%}label.include.in.report{%endtrans%}:</label>
+                    <div id="details" name="details" {% if withStudents == null %}style="display: none;"{% endif %}>
+                        <label style="width: 175px">{%trans%}label.include.in.report{%endtrans%}:</label>
                         <input type="checkbox" class="check" id="gender" name="gender" {% if gender != null %}checked="checked"{% endif %}>{%trans%}label.gender{%endtrans%}
                         <input type="checkbox" class="check" id="age" name="age" {% if age != null %}checked="checked"{% endif %}>{%trans%}label.age{%endtrans%}
                     </div>
@@ -51,7 +54,7 @@
 
         {% if tipo != null %}
         <div style="margin-top: 15px;">
-            <button style="margin-left: 15px; margin-top: 0px;" type="button" class="right btn print" id="btnPrint" name="btnPrint" rel="Listado de Estudiantes"><span></span>{% trans %}label.print{% endtrans %}</button>
+            <button style="margin-left: 15px; margin-top: 0px;" type="button" class="right button success-darker tiny" id="btnPrint" name="btnPrint" rel="Listado de Estudiantes"><span></span>{% trans %}label.print{% endtrans %}</button>
             <div class="clear"></div>
         </div>
         <div id="report" style="margin-top: 25px;">
