--- a/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/students.html.twig
+++ b/src/Tecnotek/ExpedienteBundle/Resources/views/SuperAdmin/Reports/students.html.twig
@@ -24,28 +24,26 @@
     <div class="grid_24">
         <div>
             <div class="left">
-                <h1>{% trans %}label.report.students.title{% endtrans %}</h1>
+                <h3>{% trans %}label.report.students.title{% endtrans %}</h3>
+            </div>
+            <div class="left" style="line-height: 48px; margin-left: 25px;">
                 <span>{% trans %}label.report.students.subtitle{% endtrans %}</span>
             </div>
             <div class="clear"></div>
         </div>
-        <div class="filter-search">
+        <div class="filter-search table">
             <div class="internal">
                 <form id="searchForm" action="{{ path('_expediente_report_students') }}" method="post">
-                    <div class="filter-row">
-                        <div class="field" style="width: 100%">
-                            <div class="left">
-                                <label>{%trans%}label.generate.by{%endtrans%}:</label>
-                                <input type="radio" name="tipo" value="1" {% if tipo==1 or tipo==0 %}checked{% endif %} > {%trans%}label.group{%endtrans%}
-                                <input type="radio" name="tipo" value="2" {% if tipo==2 %}checked{% endif %}> {%trans%}label.grade{%endtrans%}
-                                <input type="radio" name="tipo" value="3" {% if tipo==3 %}checked{% endif %}> {%trans%}label.institution{%endtrans%}
-                            </div>
-                            <button style="margin-left: 15px; margin-top: 0px;" type="submit" class="right btn save" name="search"><span></span>{% trans %}label.generate{% endtrans %}</button>
-                        </div>
+                    <div class="left">
+                        <label>{%trans%}label.generate.by{%endtrans%}:</label>
+                        <input type="radio" name="tipo" value="1" {% if tipo==1 or tipo==0 %}checked{% endif %} > {%trans%}label.group{%endtrans%}
+                        <input type="radio" name="tipo" value="2" {% if tipo==2 %}checked{% endif %}> {%trans%}label.grade{%endtrans%}
+                        <input type="radio" name="tipo" value="3" {% if tipo==3 %}checked{% endif %}> {%trans%}label.institution{%endtrans%}
                     </div>
+                    <button style="margin-left: 15px; margin-top: 0px;" type="submit" class="right button success-darker tiny" name="search"><span></span>{% trans %}label.generate{% endtrans %}</button>
                     <div class="clear"></div>
-                    <div class="filter-row">
-                        <label>{%trans%}label.include.in.report{%endtrans%}:</label>
+                    <div>
+                        <label style="width: 126px;">{%trans%}label.include.in.report{%endtrans%}:</label>
                         <input type="checkbox" class="check" id="gender" name="gender" {% if gender != null %}checked="checked"{% endif %}>{%trans%}label.gender{%endtrans%}
                         <input type="checkbox" class="check" id="age" name="age" {% if age != null %}checked="checked"{% endif %}>{%trans%}label.age{%endtrans%}
                     </div>
@@ -55,7 +53,7 @@
 
         {% if tipo != 0 %}
         <div style="margin-top: 15px;">
-            <button style="margin-left: 15px; margin-top: 0px;" type="button" class="right btn print" id="btnPrint" name="btnPrint" rel="Reporte de Clubes"><span></span>{% trans %}label.print{% endtrans %}</button>
+            <button style="margin-left: 15px; margin-top: 0px;" type="button" class="right button success-darker tiny" id="btnPrint" name="btnPrint" rel="Reporte de Clubes"><span></span>{% trans %}label.print{% endtrans %}</button>
             <div class="clear"></div>
         </div>
         <div id="report" style="margin-top: 25px;">
